// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRow Image should load local image when onErrorImageLoad method called 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/images/defaultAvatar.jpg",
      }
    }
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 40,
        "height": 80,
        "marginRight": 20,
        "width": 80,
      }
    }
  />
  <Text
    style={
      Object {
        "fontFamily": "Cochin",
        "fontSize": 20,
      }
    }
  >
    testFirstName testLastName
  </Text>
</View>
------------HTML PREVIEW---------------
<View style="align-items:center;flex:1;flex-direction:row;margin-bottom:10px;margin-top:10px;">
  <Image style="background-color:white;border-radius:40px;height:80px;margin-right:20px;width:80px;"></Image>
  <Text style="font-family:Cochin;font-size:20px;">
    testFirstName testLastName
  </Text>
</View>
`;

exports[`UserRow Rendering should match to snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "https://via.placeholder.com/300.png/09f/fffC",
      }
    }
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 40,
        "height": 80,
        "marginRight": 20,
        "width": 80,
      }
    }
  />
  <Text
    style={
      Object {
        "fontFamily": "Cochin",
        "fontSize": 20,
      }
    }
  >
    testFirstName testLastName
  </Text>
</View>
------------HTML PREVIEW---------------
<View style="align-items:center;flex:1;flex-direction:row;margin-bottom:10px;margin-top:10px;">
  <Image style="background-color:white;border-radius:40px;height:80px;margin-right:20px;width:80px;"></Image>
  <Text style="font-family:Cochin;font-size:20px;">
    testFirstName testLastName
  </Text>
</View>
`;
